--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -58,3 +58,25 @@ html {
         transform: rotate(0) scale(1) skew(1deg);
     }
 }
+
+@keyframes typeEffect {
+    from {
+      width: 0;
+      opacity: 0;
+    }
+    to {
+      width: 100%;
+      opacity: 1;
+    }
+  }
+  
+  @keyframes deleteEffect {
+    from {
+      width: 100%;
+      opacity: 1;
+    }
+    to {
+      width: 0;
+      opacity: 0;
+    }
+  }
