--- a/assets/css/khuyenmai.css
+++ b/assets/css/khuyenmai.css
@@ -3,14 +3,24 @@
     background-color: #f3f3f3;
 }
 
-.app a {
-    text-decoration: none;
-}
-
 *::-webkit-scrollbar{
     display: none;
 }
 
+.app a {
+    text-decoration: none;
+}
+
+.container {
+    font-size: 15px;
+    font-style: normal;
+     margin: 0;
+    font-family: 'Open Sans',sans-serif;
+    line-height: 1.8;
+    color: #333;
+    text-align: left;
+    background-color: #f3f3f3;
+}
 
 /* ------------------------banner------------------- */
 
@@ -302,47 +312,11 @@ input:focus {
     display: none;
 }
 
-/* ---------------------product--------------------------- */
-/* .container {
-    background-color: var(--white-color);
-} */
-
-
+/* -------------------CONTAINER---------------------------- */
 .new_title {
     position: relative;
-    background-color: var(--white-color) !important;
+    background-color: var(--white-color);
     margin-top: 16px;
-}
-
-.new_title::after {
-    content: "";
-    height: 2px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: #ffbe00;
-}
-
-.breadcrumb {
-    position: relative;
-    list-style: none;
-    padding: 3px 12px 2px 20px;
-    text-transform: uppercase;
-    font-size: 15px;
-}
-
-.breadcrumb-item {
-    display: inline-block;
-}
-
-.breadcrumb-item + .breadcrumb-item::before {
-    display: inline-block;
-    padding-right: 0.5rem;
-    color: #fff;
-    content: " / ";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
 }
 
 .new_title .title-h2 {
@@ -356,13 +330,26 @@ input:focus {
     z-index: 1;
 }
 
-.new_title .title-h2 a {
-    color: #fff;
-    text-decoration: none;
+.breadcrumb {
+    list-style: none;
+    margin: 0;
+    padding: 3px 12px 2px 20px;
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+.new_title:after {
+    content: '';
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #ffbe00;
 }
 
 .new_title .title-h2:after {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     width: 0;
@@ -373,422 +360,39 @@ input:focus {
     border-color: transparent transparent transparent #ffbe00;
 }
 
-.frame_img {
-    border: 1px solid #e5e5e5;
-    padding: 1rem;
-    margin-top: 2rem;
-    height: auto;
-    width: auto;
-}
-
-.img_wrapper {
-    text-align: center; 
-}
-
-.tomtat {
-    margin-top: 2rem;
-}
-
-.tomtat h1 {
-    line-height: 25px;
-    font-size: 20px;
-    margin-bottom: 15px;
-    margin-top: 0;
-    color: #3d3d3d;
-    font-weight: 700;
-    text-align: left;
-    text-transform: capitalize;
-}
-
-.divauthor {
-    width: 100%;
+.breadcrumb-item {
     display: inline-block;
-    margin-bottom: 15px;
-    font-size: 16px;
 }
 
-.other-price {
-    background-color: #f1f1f1;
-    padding: 12px;
-    text-align: left;
-    line-height: 1.5;
-}
-
-.divauthor {
-    width: 100%;
-    display: inline-block;
-    margin-bottom: 15px;
-    font-size: 16px;
-}
-
-.divauthor b {
-    color: #333;
-}
-  
-.current {
-    color: red;
-    font-size: 28px;
-    font-weight: 700;
-    display: inline-block;
-    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 3px 3px 5px grey;
-}
-
-.other-price del {
-    color: #828282;
-    margin-left: 20px;
-}
-
-
-.divauthor ul {
-    margin: 0;
-    padding: 0;
-    list-style: none outside;
-}
-
-.description ul li {
-    color: #333;
-    list-style: none;
-    font-size: 0.9em;
-    margin-bottom: 10px;
-}
-
-.number {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 20px;
-    padding-right: 20px;
-}
-
-.bt_quantity_update {
-    width: 50px;
-    float: left;
-    cursor: pointer;
-    border: 0 transparent;
-    padding: 0;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    background-color: #eee;
-    font-size: 30px;
-    transition: background-color 0.2s linear;
-    -webkit-transition: background-color 0.2s linear;
-    -o-transition: background-color 0.2s linear;
-}
-
-.product-quantity {
-    float: left;
-}
-
-.tomtat #qty {
-    width: 80px;
-    float: left;
-    height: 40px;
-    line-height: 40px;
-    border: 0;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    background-color: #eee;
-    text-align: center;
-    margin-bottom: 0;
-}
-
-.btn-info {
-    line-height: 1.7;
+.new_title .title-h2 a {
     color: #fff;
-    background-color: #ff2d37;
-    border-radius: 50px;
-    padding: 4px 2rem 4px 2rem;
-    border: 1px solid transparent;
-    margin: 0 10px;
-}
-
-.even {
-    width: 100%;
-    position: relative;
-    display: block;
-    float: left;
     font-size: 14px;
-    font-style: italic;
-    margin-bottom: 10px;
-    padding: 10px 10px 0 10px;
-    border: 1px dashed #e2e2e2;
 }
 
-.even p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-    line-height: 1.5;
-}
-
-.btn_TTCT_HDMH {
-    font-weight: 700;
-    text-transform: uppercase;
-    padding-bottom: 10px;
-    background-color: #fff;
-}
-
-.nav {
-    position: relative;
-    justify-content: flex-start;
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-}
-
-.nav-tabs>li {
-    vertical-align: middle;
+.breadcrumb-item h2 {
     display: inline-block;
-    margin: 0 5px;
-    font-size: 15px;
-    line-height: 1.5;
-}
-
-.nav-tabs>li>a.active, .nav-tabs>li>a:hover {
-    color: #fff;
-}
-
-.nav-tabs>li>a {
-    position: relative;
-    padding: 6px 10px;
-    display: block;
-    color: #fff;
-}
-
-.nav-tabs>li>a.active:before, .nav-tabs>li>a:hover:before {
-    background: red;
-}
-
-.nav-tabs>li>a:before {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
-    background: #ffbe00;
-    -webkit-transform: skew(20deg);
-    -moz-transform: skew(20deg);
-    -o-transform: skew(20deg);
-    transform: skew(20deg);
-    border-radius: 8px;
-}
-
-.nav-tabs>li>a span {
-    position: relative;
-    z-index: 1;
-}
-
-/* ----------------------Sản phẩm liên quan ------------------------*/
-.related__products-item-wrapper {
-    position: relative;
-    display: flex;
-    transition: all 0.3 ease;
-    overflow: hidden;
-}
-
-.related__products-item {
-    position: relative;
-    transition: all 0.3s ease;
-    overflow: hidden;
-    background-color: #fff; /* Màu nền cho phần content và padding */
-    background-clip: content-box; /* Chỉ áp dụng màu nền cho phần content */
-    background-origin: content-box; /* Màu nền bắt đầu từ phần content */
-    padding: 12px;
-}
-
-.related__products-item:hover .related__products-img {
-    transform: scale(1.1);
-}
-
-.related__products-title {
-    width: 100%;
-    height: 48px;
-    text-align: center;
-    position: relative;
-    margin-bottom: 16px;
-}
-
-.sale-hot {
-    z-index: 1;
-    font-size: 15px;
-    text-transform: uppercase;
     padding: 0;
-    display: block;
-    top: 12px;
-    right: 12px;
-    letter-spacing: -1px;
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    margin-top: 0;
-    margin-right: 0;
-    overflow: hidden;
-    position: absolute;
-}
-
-.sale-hot:before {
-    content: '';
-    background: #eb0303;
-    width: 120px;
-    height: 80px;
-    display: block;
-    transform: rotate( 45deg);
-    position: absolute;
-    top: -36px;
-    z-index: 0;
-}
-
-.sale-hot span {
-    position: absolute;
-    top: 4px;
-    width: 43px;
-    right: -9px;
-    height: 40px;
-    line-height: 40px;
-    font-weight: 600;
-    transform: rotate( 45deg);
-    color: #fff;
-}
-
-.title-h3 {
-    line-height: 35px;
     margin: 0;
-    position: relative;
-    display: inline-block;
-    background: #ffbe00;
-    z-index: 1;
-    padding: 4px 12px;
-}
-
-.title-h3::before {
-    content: '';
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 23px 16px 23px 0;
-    border-color: transparent #ffbe00 transparent transparent;
-    position: absolute;
-    left: -16px;
-    top: 0;
-}
-
-.title-h3::after {
-    content: '';
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 23px 0 23px 16px;
-    border-color: transparent transparent transparent #ffbe00;
-    position: absolute;
-    right: -16px;
-    top: 0;
-}
-
-.title-h3 a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 700;
-}
-
-.related__products-title::after {
-    content: '';
-    height: 1px;
-    width: 100%;
-    position: absolute;
-    bottom: 24px;
-    left: 0;
-    background: #ffbe00;
-    z-index: 0;
-}
-
-.related__products-img-wrapper {
-    width: 282px;
-    height: 295px;
-    overflow: hidden;
-}
-
-.related__products-img {
-    overflow: hidden;
-    max-height: 295px;
-    height: 295px;
-    width: 100%;
-    transition: transform 0.6s ease;
-}
-
-.product__title-name:hover a{
-    color: red;
-}
-
-.product__title-name {
-    text-align: center;
-    margin-top: 0.5rem;
-    font-weight: 700;
-    font-size: 1.6rem;
-    margin: 20px 10px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-}
-
-
-.product__title-name a {
-    color: #000;
-    line-height: 1.5;
-}
-
-.price-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.price-item {
-    margin: 5px;
-    list-style: none;
-    font-size: 15px;
-    line-height: 1.5;
-    font-weight: 700;
-    color: red;
-}
-
-.price-item:last-child {
-    color: #777;
-    font-weight: 400;
     font-size: 14px;
-    margin-left: 10px;
-    font-style: italic;
-    text-decoration: line-through;
 }
 
-.item-title-add {
+.breadcrumb-item+.breadcrumb-item::before {
+    display: inline-block;
+    padding-right: 0.5rem;
+    color: #fff;
+    content: " / ";
+}
+
+.content {
+    margin-bottom: 36px;
+}
+
+.content_text {
     width: 100%;
-    height: 58px;
-    display: flex;
-    bottom: 0;
+    padding: 1.4rem;
+    background-color: var(--white-color);
 }
 
-.item-title-link {
-    width: 100%;
-    height: 48px;
-    text-decoration: none;
-    color: var(--white-color);
-    font-size: 1.6rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #ccc;
-    margin: 0 10px 10px 10px;
-    border-radius: 30px;
-}
-
-.item-title-link:hover {
-    background-color: var(--primary-color);
-}
 
 /* --------------------footer---------------------- */
 .footer {
@@ -969,8 +573,3 @@ input:focus {
     animation: supportFix 1s infinite ease-in-out;
     transform-origin: 50% 50%;
 }
-
-  
-  
-  
-  
