--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,6 +1,6 @@
 .app{
     overflow: auto;
-    background-color: #f3f3f3;
+    /* background-color: #f3f3f3; */
 }
 
 *::-webkit-scrollbar{
@@ -75,7 +75,7 @@
     font-size: 14px;
     background-color: transparent;
     border: 0;
-    color: #fff;
+    /* color: #fff; */
     border-bottom: solid 1px #fff;
     font-size: 18px;
     font-weight: 200;
@@ -91,7 +91,7 @@
     left: 0;
     width: 0;
     opacity: 0;
-}
+  }
 
 input:focus {
     outline: none;
@@ -312,333 +312,218 @@ input:focus {
     display: none;
 }
 
-/* ----------------------CONTAINER------------------------ */
-.new_title {
-    position: relative;
-    background-color: var(--white-color);
-    margin-top: 16px;
-}
-
-.new_title .title-h2 {
-    color: #fff;
-    line-height: 35px;
-    margin: 0;
-    position: relative;
-    display: inline-block;
-    letter-spacing: normal;
-    background: #ffbe00;
-    z-index: 1;
-}
-
-.breadcrumb {
-    list-style: none;
-    margin: 0;
-    padding: 3px 12px 2px 20px;
-    text-transform: uppercase;
-    font-size: 15px;
-}
-
-.new_title:after {
-    content: '';
-    height: 2px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: #ffbe00;
-}
-
-.new_title .title-h2:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 0;
-    right: -35px;
-    height: 0;
-    border-style: solid;
-    border-width: 40px 0 0 36px;
-    border-color: transparent transparent transparent #ffbe00;
-}
-
-.breadcrumb-item {
-    display: inline-block;
-}
-
-.new_title .title-h2 a {
-    color: #fff;
-    font-size: 14px;
-}
-
-.breadcrumb-item h2 {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-}
-
-.breadcrumb-item+.breadcrumb-item::before {
-    display: inline-block;
-    padding-right: 0.5rem;
-    color: #fff;
-    content: " / ";
-}
-
-/* ----------------------CONTENT------------------- */
-
-.thongtin,
-.content {
-    padding: 0 1rem 1rem 1rem;
-}
-
-.title-text {
-    text-transform: uppercase;
-    font-size: 18px;
-    position: relative;
-    color: #fff;
-    line-height: 1.4;
-}
-
-.title-text span {
-    display: inline-block;
-    position: relative;
-    background-color: var(--primary-color);
-    padding: 6px 20px;
-    transform: translateY(-13px);
-    -webkit-transform: translateY(-13px);
-}
-
-.title-text span::after {
-    border-right: 10px solid #646464;
-    border-top: 13px solid transparent;
-    content: "";
-    left: -10px;
-    position: absolute;
-    top: 0;
-}
-
-.thongtin_title {
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-
-.form-group {
-    width: 100%;
-    height: 42px;
-    margin-bottom: 0.8rem;
-}
-
-.wrapper .form-control {
-    border: 1px solid #ebebeb;
-    height: calc(2.7rem);
-}
-
-.form-control {
-    display: block;
-    width: 100%;
-    height: 100% !important;
-    padding: 0.8rem;
-    line-height: 1.5;
-    font-size: .9rem;
-    color: #495057;
-    background-color: #fff;
-    font-weight: 400;
-    background-clip: padding-box;
-    border-radius: 5px;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.product__wrapper {
-    border-top: dashed 1px rgba(0,0,0,.19);
-}
-
-.product__img {
-    padding: 0;
-}
-
-.img {
-    width: 90px;
-    height: auto;
-}
-
-.name-cart {
-    font-weight: 600;
-}
-
-.price__wrapper {
-    border-top: dashed 1px rgba(0,0,0,.19);
-    padding-top: 0.5rem;
-    margin-top: 0.5rem;
-    width: 100%;
-}
-
-.price__chitiet {
-    display: flex;
-    align-items: center;
-}
-
-.number {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.number__left {
-    width: 50%;
-}
-
-.number__right {
-    width: 50%;
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 0.5rem;
-}
-
-.number__right>[class*=c-] {
-    padding-right: 0;
-    padding-left: 0;
-}
-
-.quantity_down {
-    display: block;
-    cursor: pointer;
-    border: 0 transparent;
-    padding: 0;
-    height: 30px;
-    line-height: 30px;
+/* ----------------------CONTAINER-------------------------- */
+.login__signup {
+    padding: 12px 0;
     text-align: center;
-    border: 1px solid #ffbe00;
-    font-size: 13px;
-    transition: background-color .2s linear;
-    -webkit-transition: background-color .2s linear;
-    border-top-left-radius: 0.25rem!important;
-    border-bottom-left-radius: 0.25rem!important;
-    border-right: 0;
+    font-size: 20px;
 }
 
-.qty {
+.login__signup span {
+    margin: 28px;
+}
+
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked){
+    display: none;
+}
+
+.checkbox:checked + label,
+.checkbox:not(:checked) + label{
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 16px;
+  border-radius: 8px;
+  margin: 10px auto;
+  cursor: pointer;
+  background-color: #ffeba7;
+}
+
+.checkbox:checked + label:before,
+.checkbox:not(:checked) + label:before{
+  position: absolute;
+  display: block;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  color: #ffeba7;
+  background-color: #020305;
+  content: '\2196';
+  z-index: 20;
+  top: -10px;
+  left: -10px;
+  line-height: 36px;
+  text-align: center;
+  font-size: 24px;
+  transition: all 0.5s ease;
+}
+
+.checkbox:checked + label:before {
+  transform: translateX(44px) rotate(-270deg);
+}
+
+.container_login {
+    position: relative;
     width: 100%;
-    height: 30px;
-    line-height: 30px;
-    border: 0;
-    border-top: 1px solid #ffbe00;
-    border-bottom: 1px solid #ffbe00;
-    text-align: center;
-    margin-bottom: 0;
-}
-
-.quantity_up {
     display: block;
-    cursor: pointer;
-    /* border: 0 transparent; */
-    padding: 0;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    border: 1px solid #ffbe00;
-    font-size: 13px;
-    transition: background-color .2s linear;
-    -webkit-transition: background-color .2s linear;
-    -o-transition: background-color .2s linear;
-    border-top-right-radius: 0.25rem!important;
-    border-bottom-right-radius: 0.25rem!important;
-    border-left: 0;
 }
 
-.price {
-    width: 100%;
-}
-
-.price span {
-    font-weight: 700;
-}
-
-.delete {
-    color: #000;
-    font-size: 18px;
-}
-
-.tongtien {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: dashed 1px rgba(0,0,0,.19);
-    margin-top: 8px;
-}
-
-.tongtien__left {
-    padding: 0.8rem;
-    font-weight: 700;
-}
-
-.tongtien__right {
-    padding: 0.8rem;
-    color: #ea1d28;
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.title_thanhtoan {
-    display: inline-block;
-    color: #333;
-    font-size: 16px;
-    text-transform: uppercase;
-    margin-bottom: 20px;
+.container__wrap {
+    position: relative;
+    height: 620px;
+    /* width: 100%; */
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
     margin-top: 20px;
-    padding-bottom: 5px;
-    border-bottom: solid 1px red;
-    
-}
+  }
 
-.payment__methonds {
-    border-bottom: 1px solid #e5e5e5!important;
-}
-
-.payment__methonds-item {
-    list-style: none;
-}
-
-.payment__methonds-item span{
-    margin-left: 5px;
-}
-
-.btn__shopping--cart {
-    width: 100%;
-    height: 40px;
-    color: #fff;
-    background-color: #ff2d37;
-    border-radius: 0.5rem;
-    border: 1px solid #ebebeb;
-    margin-top: 20px;
-}
-
-.btn__shopping--cart:hover {
-    color: #fff;
-    box-shadow: 0 4px 14px 0 rgba(110,125,131,.62);
-}
-
-.muasanphamkhac {
-    width: 100%;
+.container__wrapper {
+    margin-top: var(--header-height);
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    transition: all 600ms ease-out; 
+}
+
+.container__left,
+.container__right {
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 6px;
+    -webkit-transform-style: preserve-3d;
+}
+
+.container__left-wrap,
+.container__right-wrap {
+    /* margin: 30px; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 0 35px;
+    top: 50%;
+    left: 0;
+    transform: translate3d(0, -50%, 35px) perspective(100px);
+    z-index: 20;
+    display: block;
+}
+
+.container__left {
+    transform: rotateY(180deg);
+}
+.checkbox:checked ~ .container__wrap .container__wrapper {
+    transform: rotateY(180deg);
+}
+.container__left h2,
+.container__right h2 {
+    font-size: 3.6rem;
+}
+
+input:focus {
+    outline: none;
+}
+
+.button {
+    width: 100%;
+}
+  
+
+.taikhoan {
+    margin: 30px 0;
+}
+
+.taikhoan p{
+    font-size: 1.6rem;
+}
+
+.taikhoan__user {
+    padding: 15px 0 0 0;
+    border-width: 0;
+    width: 100%;
+    font-size: 1.8rem;
+    border: 1px solid #949494;
+    border-style: none;
+}
+
+.matkhau {
+    margin: 30px 0;
+}
+
+.matkhau_wrap {
+    display: flex;
     align-items: center;
-    color: #44b362;
-    text-decoration: none;
-    background-color: transparent;
-    margin: 16px 0;
-    font-weight: 700;
+    justify-content: center;
 }
 
-.muasanphamkhac i {
-    margin-left: 8px;
+.matkhau p {
+    font-size: 1.6rem;
 }
 
-.muasanphamkhac:hover {
-    color: #777;
-    text-decoration: none;
+.matkhau_pass {
+    padding: 15px 0 0;
+    border-width: 0;
+    width: 100%;
+    font-size: 1.8rem;
+    border: 1px solid #949494;
+    border-style: none;
 }
+
+.icon_eye {
+    font-size: 1.6rem;
+}
+
+.forget__pass-link {
+    text-decoration: none;
+    float: right;
+    font-size: 1.6rem;
+    color: #000;
+}
+
+.btn-wrap-login {
+    /* margin-top: 70px; */
+}
+
+.btn-dangnhap {
+    margin: 5px 0 20px 0;
+}
+
+.btn-login {
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    border: 1px solid;
+    background-color: #28a745;
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 500;
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.btn-login i{
+    font-size: 2.6rem;
+}
+
+.btn-login-fb {
+    margin: 20px 0 12px 0;
+    background-color: #3b5998;
+}
+
+.btn-login-ap {
+    background-color: #000;
+    margin: 12px 0;
+}
+
+.btn-login-gg {
+    margin: 12px 0;
+    background-color: #e4002b;
+}
+
 
 /* --------------------footer---------------------- */
 .footer {
@@ -819,3 +704,4 @@ input:focus {
     animation: supportFix 1s infinite ease-in-out;
     transform-origin: 50% 50%;
 }
+
