--- a/assets/css/tintuc.css
+++ b/assets/css/tintuc.css
@@ -1,6 +1,6 @@
 .app{
     overflow: auto;
-    /* background-color: #f3f3f3; */
+    background-color: #f3f3f3;
 }
 
 *::-webkit-scrollbar{
@@ -11,14 +11,10 @@
     text-decoration: none;
 }
 
-input::placeholder {
-    color: #949494;
-}
-
 .container {
     font-size: 15px;
     font-style: normal;
-     margin: 0;
+    margin: 0;
     font-family: 'Open Sans',sans-serif;
     line-height: 1.8;
     color: #333;
@@ -79,7 +75,7 @@ input::placeholder {
     font-size: 14px;
     background-color: transparent;
     border: 0;
-    /* color: #fff; */
+    color: #fff;
     border-bottom: solid 1px #fff;
     font-size: 18px;
     font-weight: 200;
@@ -316,217 +312,217 @@ input:focus {
     display: none;
 }
 
-/* ----------------------CONTAINER-------------------------- */
-.login__signup {
-    padding: 12px 0;
-    text-align: center;
-    font-size: 20px;
-}
-
-.login__signup span {
-    margin: 28px;
-}
-
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
-    display: none;
-}
-
-.checkbox:checked + label,
-.checkbox:not(:checked) + label{
-  position: relative;
-  display: block;
-  width: 60px;
-  height: 16px;
-  border-radius: 8px;
-  margin: 10px auto;
-  cursor: pointer;
-  background-color: #ffeba7;
-}
-
-.checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before{
-  position: absolute;
-  display: block;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  color: #ffeba7;
-  background-color: #020305;
-  content: '\2196';
-  z-index: 20;
-  top: -10px;
-  left: -10px;
-  line-height: 36px;
-  text-align: center;
-  font-size: 24px;
-  transition: all 0.5s ease;
-}
-
-.checkbox:checked + label:before {
-  transform: translateX(44px) rotate(-270deg);
-}
-
-.container_login {
+/* ----------------------CONTAINER------------------------- */
+.new_title {
     position: relative;
-    width: 100%;
-    display: block;
+    background-color: var(--white-color) !important;
+    margin-top: 16px;
 }
 
-.container__wrap {
-    position: relative;
-    height: 620px;
-    /* width: 100%; */
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    margin-top: 20px;
-  }
-
-.container__wrapper {
-    margin-top: var(--header-height);
-    display: flex;
-    justify-content: center;
+.new_title::after {
+    content: "";
+    height: 2px;
     width: 100%;
-    height: 100%;
-    position:absolute;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    transition: all 600ms ease-out; 
-}
-
-.container__left,
-.container__right {
-    background-color: #fff;
-    width: 100%;
-    height: 100%;
     position: absolute;
-    border-radius: 6px;
-    -webkit-transform-style: preserve-3d;
-}
-
-.container__left-wrap,
-.container__right-wrap {
-    /* margin: 30px; */
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 0 35px;
-    top: 50%;
+    bottom: 0;
     left: 0;
-    transform: translate3d(0, -50%, 35px) perspective(100px);
-    z-index: 20;
-    display: block;
+    background: #ffbe00;
 }
 
-.container__left {
-    transform: rotateY(180deg);
-}
-.checkbox:checked ~ .container__wrap .container__wrapper {
-    transform: rotateY(180deg);
-}
-.container__left h2,
-.container__right h2 {
-    font-size: 3.6rem;
+.breadcrumb {
+    position: relative;
+    list-style: none;
+    padding: 3px 12px 2px 20px;
+    text-transform: uppercase;
+    font-size: 15px;
 }
 
-input:focus {
-    outline: none;
+.breadcrumb-item {
+    display: inline-block;
 }
 
-.button {
-    width: 100%;
-}
-  
-
-.taikhoan {
-    margin: 30px 0;
-}
-
-.taikhoan p{
-    font-size: 1.6rem;
-}
-
-.taikhoan__user {
-    padding: 15px 0 0 0;
-    border-width: 0;
-    width: 100%;
-    font-size: 1.8rem;
-    border: 1px solid #949494;
-    border-style: none;
-}
-
-.matkhau {
-    margin: 30px 0;
-}
-
-.matkhau_wrap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.matkhau p {
-    font-size: 1.6rem;
-}
-
-.matkhau_pass {
-    padding: 15px 0 0;
-    border-width: 0;
-    width: 100%;
-    font-size: 1.8rem;
-    border: 1px solid #949494;
-    border-style: none;
-}
-
-.icon_eye {
-    font-size: 1.6rem;
-}
-
-.forget__pass-link {
-    text-decoration: none;
-    float: right;
-    font-size: 1.6rem;
-    color: #000;
-}
-
-.btn-wrap-login {
-    /* margin-top: 70px; */
-}
-
-.btn-dangnhap {
-    margin: 5px 0 20px 0;
-}
-
-.btn-login {
-    width: 100%;
-    height: 50px;
-    border-radius: 25px;
-    border: 1px solid;
-    background-color: #28a745;
+.breadcrumb-item + .breadcrumb-item::before {
+    display: inline-block;
+    padding-right: 0.5rem;
     color: #fff;
+    content: " / ";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+}
+
+.new_title .title-h2 {
+    color: #fff;
+    line-height: 35px;
+    margin: 0;
+    position: relative;
+    display: inline-block;
+    letter-spacing: normal;
+    background: #ffbe00;
+    z-index: 1;
+}
+
+.new_title .title-h2 a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.new_title .title-h2:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 0;
+    right: -35px;
+    height: 0;
+    border-style: solid;
+    border-width: 40px 0 0 36px;
+    border-color: transparent transparent transparent #ffbe00;
+}
+
+.new__product {
+    margin: 8px 0 16px 0;
+    position: relative;
+}
+
+.new__product-item-wrapper {
+    position: relative;
+    display: flex;
+    overflow-x: auto;
+    transition: all 0.3 ease;
+}
+
+.new__product-item {
+    position: relative;
+    padding: 12px;
+    transition: all 0.3s ease;
+    overflow: hidden;
+    background-color: #fff;
+    background-clip: content-box; 
+    background-origin: content-box;
+}
+
+.new__product-item:hover .new__product-img {
+    transform: scale(1.1);
+}
+
+
+.new__product-title::after {
+    content: '';
+    height: 1px;
+    width: 100%;
+    position: absolute;
+    bottom: 24px;
+    left: 0;
+    background: #ffbe00;
+    z-index: 0;
+}
+
+.new__product-img-wrapper {
+    width: 384px;
+    height: 232px;
+    overflow: hidden;
+}
+
+.new__product-img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s ease;
+}
+
+.product__title-name {
+    margin-top: 0.5rem;
     font-size: 1.6rem;
-    font-weight: 500;
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
 }
 
-.btn-login i{
-    font-size: 2.6rem;
+.product__title-name a {
+    color: #7d7d7d;
+    line-height: 1.6;
 }
 
-.btn-login-fb {
-    margin: 20px 0 12px 0;
-    background-color: #3b5998;
+.title-h4 {
+    padding: 12px;
 }
 
-.btn-login-ap {
-    background-color: #000;
-    margin: 12px 0;
+.title-h4 a{
+    padding-bottom: 12px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #333;
+    border-bottom: 1px solid #e5e5e5;
 }
 
-.btn-login-gg {
-    margin: 12px 0;
-    background-color: #e4002b;
+.title-h4:hover a{
+    color: var(--primary-color);
 }
+
+.calendar {
+    padding: 0 12px;
+}
+
+.calendar i {
+    padding-right: 6px;
+    color: #ea1d28;
+}
+
+.page {
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    border-radius: 0.25rem;
+    padding: 8px;
+}
+
+.page-item.active .page-link {
+    z-index: 1;
+    border: 1px solid #ffbe00;
+    background-color: #ffbe00;
+    color: #fff;
+}
+
+.page-link {
+    position: relative;
+    display: block;
+    margin-left: 2px;
+    color: #959595;
+    border: 1px solid #c5c2c2;
+    text-align: center;
+    padding: 5px 15px;
+    border-radius: 3px;
+}
+
+.page-link:hover {
+    z-index: 2;
+    border: 1px solid #ffbe00;
+    background-color: #ffbe00;
+    color: #fff;
+    text-decoration: none;
+}
+
+.noidung {
+    text-align: justify;
+    letter-spacing: -.22px;
+    margin: 2rem 0;
+    margin-top: 34px;
+    padding: 16px;
+    background-color: #fff;
+}
+
+a {
+    color: #44b362;
+    text-decoration: none;
+    background-color: transparent;
+}
+
 
 
 /* --------------------footer---------------------- */
@@ -708,4 +704,3 @@ input:focus {
     animation: supportFix 1s infinite ease-in-out;
     transform-origin: 50% 50%;
 }
-
