--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -28,6 +28,10 @@ input::placeholder {
     color: #949494;
 }
 
+.pass::placeholder {
+    color: white;
+}
+
 @keyframes subnavGrowth {
     from {
         opacity: 0;
