--- a/assets/css/giohang.css
+++ b/assets/css/giohang.css
@@ -11,6 +11,12 @@
     text-decoration: none;
 }
 
+a {
+    color: #44b362;
+    text-decoration: none;
+    background-color: transparent;
+}
+
 .container {
     font-size: 15px;
     font-style: normal;
@@ -440,13 +446,17 @@ input:focus {
     height: 100% !important;
     padding: 0.8rem;
     line-height: 1.5;
-    font-size: .9rem;
+    font-size: 1.4rem;
     color: #495057;
     background-color: #fff;
     font-weight: 400;
     background-clip: padding-box;
     border-radius: 5px;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+textarea.form-control {
+    height: auto;
 }
 
 .product__wrapper {
