--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -834,6 +834,15 @@ ul.cate_1 li .title_h3 {
     padding: 0;
 }
 
+.ul-footer a:before {
+    content: "\f105";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    margin-right: 8px;
+    top: 0;
+    left: 0;
+}
+
 .ul-footer li {
     color: #fff;
     
